# LOVErnment-DAO

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  STATUS.md
.github/workflows/: tests.yml
bigen/integrity/: SCHEMA.md
community/lexicon/preference/: ai.json
crates/lovernment-core/: Cargo.toml
crates/lovernment-core/examples/: fractal_cascade.rs
crates/lovernment-core/src/: cascade.rs  lib.rs  performance.rs
crates/lovernment-core/tests/: d001_performance_putrecord.rs  d002_negative_suite.rs  smoke.rs
crates/queenbee-voice/: Cargo.toml
crates/queenbee-voice/src/: ceremony.rs  heartbeat.rs  lib.rs  pipeline.rs  wrapper.rs
crates/queenbee-voice/src/adapter/: mod.rs  tree_landing.rs
crates/queenbee-voice/src/pds/: live_client.rs  live_transport.rs  mod.rs
crates/queenbee-voice/tests/: d005_tree_landing_suite.rs  d006_wrapper_suite.rs  d007_heartbeat_suite.rs  d008_pipeline_suite.rs  d009a2_fail_closed_suite.rs  d009b_live_write_suite.rs  d009c_ceremony_suite.rs
crates/queenbee-voice/tests/fixtures/: tree_landing_bnature.txt  tree_landing_skaists.txt
dockets/: D-001.md  D-002.md  D-004-to-D-008-voice.md  D-009a-live-client.md  D-009a2-fail-closed.md  D-009b2-finalize.md  D-009c-first-word.md
docs/: governance-lineage.md
docs/audits/: glm-capture-invariant-redteam-report.md  glm-demo-docket-28b8fd8.md  glm-f8c-restatement.md  glm-fractal-cascade-demo-audit-report.md  glm-lovernment-emission-redteam-memo.md
docs/research/: D-1_fractally_whitepaper_dossier.md  D-2_eden_dossier.md  D-3_circle_size_8_citation_memo.md
lexicons/social.skaists.alpha/audit/: entry.json
lexicons/social.skaists.alpha/performance/: defs.json  set.json  setStatus.json
reviews/: 2026-07-12-filecoin-heads-review.md
specs/: AGENT-1.md  BIO-1.md  M-1-PREREG.md  PERSON-1.md  SPEC-performance-set.md  SPIRIT-1.md  VOICE-1.md
