[package]
name = "queenbee-voice"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "bQueenBee publishing pipeline — adapters, wrapper, heartbeat, atomic audit"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
# Fixtures and assertions are pure — no network deps in this crate.
