[package]
name = "queenbee-voice"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "bQueenBee publishing pipeline — adapters, wrapper, heartbeat, atomic audit"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# D-009c: the real ATProto XRPC transport speaks HTTPS. ureq (synchronous)
# with rustls (pure-Rust TLS), sitting BEHIND the XrpcTransport /
# AuditRecordSource trait boundary the offline laps proved against mocks.
# Tests never touch the network. Founder-selected supply chain (2026-07-12).
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
serde_json = "1"
